--- a/MobilebACKEND/packages.config
+++ b/MobilebACKEND/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="9.0.0" targetFramework="net472" />
-  <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.7.0" targetFramework="net472" />
@@ -70,6 +70,8 @@
   <package id="System.IO" version="4.1.0" targetFramework="net472" />
   <package id="System.Linq" version="4.1.0" targetFramework="net472" />
   <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net472" />
+  <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net47" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net47" />
   <package id="System.Reflection" version="4.1.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net472" />
