--- a/MobilebACKEND/Web.config
+++ b/MobilebACKEND/Web.config
@@ -32,7 +32,10 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
         <add assembly="System.ComponentModel.Composition, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
     </compilation>
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="1048576"  />
+
+
+
   </system.web>
   <entityFramework>
     <providers>
@@ -52,6 +55,12 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+
+      <security>
+        <requestFiltering>
+          <requestLimits maxAllowedContentLength="1073741824" />
+        </requestFiltering>
+      </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
