--- a/MobilebACKEND/Web.config
+++ b/MobilebACKEND/Web.config
@@ -55,7 +55,9 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-
+    <modules runAllManagedModulesForAllRequests="true">
+      <remove name="WebDAVModule"/>
+    </modules>
       <security>
         <requestFiltering>
           <requestLimits maxAllowedContentLength="1073741824" />
